fix: address code review findings for entitlement service
- Replace IllegalStateException with EntitlementAuthException to prevent
  unrelated ISEs from being misrouted to HTTP 401
- Replace newCachedThreadPool with newVirtualThreadPerTaskExecutor to
  prevent unbounded thread accumulation on Firestore timeouts
- Fix deductCredit timeout to use checkMs (not incrementMs) per spec
- Remove unused Window/timezone config field from EntitlementPlanConfig

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>